# ChangeLog for dev-util/perf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/perf/ChangeLog,v 1.12 2010/01/31 10:27:21 flameeyes Exp $

*perf-2.6.33_rc6 (31 Jan 2010)

  31 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -perf-2.6.33_rc2.ebuild, -perf-2.6.33_rc5.ebuild, +perf-2.6.33_rc6.ebuild,
  metadata.xml:
  Bump to rc6 (instead of revbumping) so that the RC patch is actually
  applied. Huge thanks to Zeev Tarantov in bug #302387 for reporting and
  providing the fix. Also introduce perl USE flag for the Perl scripting in
  perf, and fix building with USE=perl and --as-needed (patch to be sent
  upstream).

  23 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  perf-2.6.33_rc2.ebuild, perf-2.6.33_rc5.ebuild:
  Fix (again) bug #291801.

*perf-2.6.33_rc5 (22 Jan 2010)

  22 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +perf-2.6.33_rc5.ebuild:
  Bump to latest rc.

*perf-2.6.33_rc2 (28 Dec 2009)

  28 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -perf-2.6.33_rc1.ebuild, +perf-2.6.33_rc2.ebuild:
  Version bump and cleanup previous rc.

*perf-2.6.33_rc1 (19 Dec 2009)

  19 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +perf-2.6.33_rc1.ebuild:
  Version bump.

*perf-2.6.32 (04 Dec 2009)

  04 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -perf-2.6.32_rc7.ebuild, +perf-2.6.32.ebuild:
  Bump to final .32 version.

*perf-2.6.32_rc7 (16 Nov 2009)

  16 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -perf-2.6.32_rc6.ebuild, +perf-2.6.32_rc7.ebuild:
  Version bump to latest rc; make the linux-info checks non-fatal since the
  package builds anyway.

  04 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  perf-2.6.32_rc6.ebuild:
  Fix typo, closes bug #291801 by Zeev Tarantov.

*perf-2.6.32_rc6 (03 Nov 2009)

  03 Nov 2009; Diego E. Pettenò <flameeyes@gentoo.org> -perf-2.6.31.ebuild,
  -perf-2.6.32_rc5.ebuild, +perf-2.6.32_rc6.ebuild: