@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
 DIST patch-2.6.33-rc6.bz2 10414342 RMD160 cda487173d9d9cc15ce675aa487a1bba3428f368 SHA1 082dc6048eb7423c4beda0a62e785a010752b49a SHA256 8b8ac844b7154d952469587bcb9d2cff089cc71ccd7522e38eedcdc1f2c007a5
+DIST patch-2.6.33-rc7.bz2 10488988 RMD160 c8e00f5f77a54dbce90a209c1bb1782565768330 SHA1 4d908c14082d755824ecae91fd4e7c34f7d23e14 SHA256 8cd304b686ea9a29843952bbb43b9ae53fce6884d3c22187407c30d1acf83664
 EBUILD perf-2.6.32.ebuild 3487 RMD160 f86f2e8878b280aee1fa0a4ff2eb5f9f00da335d SHA1 f9c016bb6edf5c41aa8418f30aaaf24dab07c566 SHA256 312862ca7008b1a38a3b16b98b7a57f1af89ab4c4892de6c47811f0756081560
 EBUILD perf-2.6.33_rc6.ebuild 3664 RMD160 75cce602fe408fe1c5d027f5baebbfbb5b86c6ba SHA1 c086cb02959fcab69423d54da5cd782bb51041f8 SHA256 398ec397d7f1e22a6f47e3f0ba3e6c1880923c085aff4d88e8776fa6a7cfd0f7
-MISC ChangeLog 2634 RMD160 57a71dc2995622a2cf589bf849f471a1649db086 SHA1 79b70be0acada0bbfe9de0f223586d8c00207e2b SHA256 50a2f601d65d225eae4bcf8f434f96e339b024fd792011c1f08455dbc33b223d
+EBUILD perf-2.6.33_rc7.ebuild 3664 RMD160 c1642b6d2ff2752bd07b081b11af29764c96918c SHA1 b71b9890b2a365287e8f1e3ca6e0faf43a8a7c97 SHA256 1ea366ccba1581762e718969263f21c43187de081705ec6164b42101a2b68f12
+MISC ChangeLog 2766 RMD160 6306a827be78903b92dfc7138d886dbd6499074f SHA1 4167ffb35f2f61e36bae822b1f93cd4c526b2d3c SHA256 0e8fa8d378cecd1eca77ab3330a6eb7e323246d5ae3c7fa3bdf7aa5c1e7f26db
 MISC metadata.xml 919 RMD160 35247c31e6b8259ef822c000bfc4d3d2e88abaa8 SHA1 d9789c5d3f286f9f4c0672270450e57c54aaa497 SHA256 0a9ff10033b8ed30a10e72c0abc6d7494c967d8790585c484f2f1219ea007f2b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktlWxMACgkQAiZjviIA2XjWjQCfZ66/QClXgUmqw6FWYQ1d/HGk
-h1IAnisEJl4r+1ASQTlNXhwdqJfVTJ9C
-=rbdA
+iEYEARECAAYFAktxhHgACgkQAiZjviIA2XjzVwCgpTMdOJP9iKz2/9tfx6AlOIoR
+Bh8AoOGXEWIUMufAhtW0qU7JBqir10r+
+=8L2B
 -----END PGP SIGNATURE-----
