@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/perf
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/perf/ChangeLog,v 1.12 2010/01/31 10:27:21 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/perf/ChangeLog,v 1.13 2010/02/09 15:50:58 flameeyes Exp $
+
+*perf-2.6.33_rc7 (09 Feb 2010)
+
+  09 Feb 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +perf-2.6.33_rc7.ebuild:
+  Version bump.
 
 *perf-2.6.33_rc6 (31 Jan 2010)
 
